[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/anima/shapes/Rectangle.gd" type="Script" id=1]
[ext_resource path="res://addons/anima/ui/property/AnimaPropertyFromTo.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/anima/ui/editor/AnimaAnimation.gd" type="Script" id=3]
[ext_resource path="res://addons/anima/components/AnimaButton.gd" type="Script" id=4]
[ext_resource path="res://addons/anima/icons/Play.svg" type="Texture" id=5]

[node name="AnimaAnimation" type="Control"]
anchor_bottom = 1.0
rect_min_size = Vector2( 360, 0 )
script = ExtResource( 3 )

[node name="Rectangle" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -664.0
rect_min_size = Vector2( 360, 0 )
rect_pivot_offset = Vector2( 180, 300 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
Animation/AnimatePropertyChange = true
Animation/Speed = 0.3
Animation/Easing = 0
Rectangle/Size = Rect2( 0, 0, 100, 100 )
Rectangle/FillColor = Color( 0, 0, 0, 1 )
Rectangle/Border/Color = Color( 1, 1, 1, 0 )
Rectangle/Border/Blend = false
Rectangle/Border/Offset = Vector2( 0, 0 )
Rectangle/Border/Widh/Left = 0
Rectangle/Border/Widh/Top = 0
Rectangle/Border/Widh/Right = 0
Rectangle/Border/Widh/Bottom = 0
Rectangle/Border/Radius/Details = 8
Rectangle/Border/Radius/TopLeft = 8.0
Rectangle/Border/Radius/TopRight = 8
Rectangle/Border/Radius/BottomRight = 8.0
Rectangle/Border/Radius/BottomLeft = 8.0
Rectangle/Border/Offset/Radius/Details = 8
Rectangle/Border/Offset/Radius/TopLeft = -1
Rectangle/Border/Offset/Radius/TopRight = -1
Rectangle/Border/Offset/Radius/BottomRight = -1
Rectangle/Border/Offset/Radius/BottomLeft = -1
Rectangle/Shadow/Color = Color( 1, 1, 1, 0 )
Rectangle/Shadow/Size = 0
Rectangle/Shadow/Offset = Vector2( 0, 0 )

[node name="CenterContainer" type="CenterContainer" parent="Rectangle"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Rectangle/CenterContainer"]
margin_left = 24.0
margin_top = 118.0
margin_right = 336.0
margin_bottom = 482.0
rect_min_size = Vector2( 312, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="GridContainer" parent="Rectangle/CenterContainer/VBoxContainer"]
margin_right = 312.0
margin_bottom = 364.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 12

[node name="Label" type="Label" parent="Rectangle/CenterContainer/VBoxContainer/HBoxContainer"]
visible = false
margin_right = 312.0
margin_bottom = 25.0
text = "Animation name:"

[node name="AnimationName" parent="Rectangle/CenterContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
visible = false
margin_right = 312.0
margin_bottom = 49.0
label = "default"
type = 4
show_relative_selector = false

[node name="HSeparator" type="HSeparator" parent="Rectangle/CenterContainer/VBoxContainer/HBoxContainer"]
visible = false
margin_right = 312.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 48 )

[node name="Label2" type="Label" parent="Rectangle/CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 312.0
margin_bottom = 25.0
text = "Visibility strategy:"

[node name="VisibilityStrategy" type="OptionButton" parent="Rectangle/CenterContainer/VBoxContainer/HBoxContainer"]
margin_top = 37.0
margin_right = 312.0
margin_bottom = 85.0
rect_min_size = Vector2( 0, 48 )
text = "Ignore"
items = [ "Ignore", null, false, 0, null, "Hidden", null, false, 1, null, "Transparent", null, false, 2, null, "Hidden & Transparent", null, false, 3, null ]
selected = 0

[node name="HSeparator2" type="HSeparator" parent="Rectangle/CenterContainer/VBoxContainer/HBoxContainer"]
margin_top = 97.0
margin_right = 312.0
margin_bottom = 145.0
rect_min_size = Vector2( 0, 48 )

[node name="Label3" type="Label" parent="Rectangle/CenterContainer/VBoxContainer/HBoxContainer"]
margin_top = 157.0
margin_right = 312.0
margin_bottom = 182.0
text = "Default duration (s):"

[node name="DefaultDuration" parent="Rectangle/CenterContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
margin_top = 194.0
margin_right = 312.0
margin_bottom = 243.0
label = "0.7"
show_relative_selector = false

[node name="HSeparator3" type="HSeparator" parent="Rectangle/CenterContainer/VBoxContainer/HBoxContainer"]
margin_top = 255.0
margin_right = 312.0
margin_bottom = 303.0
rect_min_size = Vector2( 0, 48 )

[node name="HBoxContainer" type="HBoxContainer" parent="Rectangle/CenterContainer/VBoxContainer/HBoxContainer"]
margin_top = 315.0
margin_right = 312.0
margin_bottom = 364.0
alignment = 1

[node name="AnimaButton" type="Control" parent="Rectangle/CenterContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
margin_left = 96.0
margin_right = 216.0
margin_bottom = 49.0
rect_min_size = Vector2( 120, 49 )
rect_pivot_offset = Vector2( 60, 24.5 )
script = ExtResource( 4 )
__meta__ = {
"__visibility_strategy": 0,
"_visibility_strategy_reverted": true
}
Animation/AnimatePropertyChange = true
Animation/Speed = 0.3
Animation/Easing = 0
Button/Text = "Play"
Button/ICON = ExtResource( 5 )
Button/Align = 1
Button/Font = null
Button/Disabled = false
Button/ToggleMode = false
Button/ShortcutInTooltip = true
Button/Pressed = false
Button/ContentMargin = 12
Button/Group = null
Normal/FillColor = Color( 0.192157, 0.270588, 0.411765, 1 )
Normal/FontColor = Color( 1, 1, 1, 1 )
Hovered/UseSameStyleOf = ""
Hovered/FillColor = Color( 0.353725, 0.416471, 0.529412, 1 )
Hovered/FontColor = Color( 1, 1, 1, 0 )
Hovered/Scale = Vector2( 1, 1 )
Pressed/UseSameStyleOf = ""
Pressed/FillColor = Color( 0.272941, 0.343529, 0.470588, 1 )
Pressed/FontColor = Color( 1, 1, 1, 0 )
Focused/UseSameStyleOf = ""
Focused/FillColor = Color( 0.272941, 0.343529, 0.470588, 1 )
Focused/FontColor = Color( 1, 1, 1, 0 )
Normal/Size = Rect2( 0, 0, 100, 100 )
Hovered/Size = Rect2( -1, -1, -1, -1 )
Focused/Size = Rect2( -1, -1, -1, -1 )
Pressed/Size = Rect2( -1, -1, -1, -1 )
Normal/Border/Color = Color( 1, 1, 1, 0 )
Hovered/Border/Color = Color( 1, 1, 1, 0 )
Focused/Border/Color = Color( 1, 1, 1, 0 )
Pressed/Border/Color = Color( 1, 1, 1, 0 )
Normal/Border/Blend = false
Hovered/Border/Blend = false
Focused/Border/Blend = false
Pressed/Border/Blend = false
Normal/Border/Offset = Vector2( 0, 0 )
Hovered/Border/Offset = Vector2( -1, -1 )
Focused/Border/Offset = Vector2( -1, -1 )
Pressed/Border/Offset = Vector2( -1, -1 )
Normal/Border/Widh/Left = 0
Hovered/Border/Widh/Left = -1
Focused/Border/Widh/Left = -1
Pressed/Border/Widh/Left = -1
Normal/Border/Widh/Top = 0
Hovered/Border/Widh/Top = -1
Focused/Border/Widh/Top = -1
Pressed/Border/Widh/Top = -1
Normal/Border/Widh/Right = 0
Hovered/Border/Widh/Right = -1
Focused/Border/Widh/Right = -1
Pressed/Border/Widh/Right = -1
Normal/Border/Widh/Bottom = 0
Hovered/Border/Widh/Bottom = -1
Focused/Border/Widh/Bottom = -1
Pressed/Border/Widh/Bottom = -1
Normal/Border/Radius/Details = 8
Hovered/Border/Radius/Details = -1
Focused/Border/Radius/Details = -1
Pressed/Border/Radius/Details = -1
Normal/Border/Radius/TopLeft = 8
Hovered/Border/Radius/TopLeft = -1
Focused/Border/Radius/TopLeft = -1
Pressed/Border/Radius/TopLeft = -1
Normal/Border/Radius/TopRight = 8
Hovered/Border/Radius/TopRight = -1
Focused/Border/Radius/TopRight = -1
Pressed/Border/Radius/TopRight = -1
Normal/Border/Radius/BottomRight = 8
Hovered/Border/Radius/BottomRight = -1
Focused/Border/Radius/BottomRight = -1
Pressed/Border/Radius/BottomRight = -1
Normal/Border/Radius/BottomLeft = 8
Hovered/Border/Radius/BottomLeft = -1
Focused/Border/Radius/BottomLeft = -1
Pressed/Border/Radius/BottomLeft = -1
Normal/Border/Offset/Radius/Details = 8
Hovered/Border/Offset/Radius/Details = -1
Focused/Border/Offset/Radius/Details = -1
Pressed/Border/Offset/Radius/Details = -1
Normal/Border/Offset/Radius/TopLeft = -1
Hovered/Border/Offset/Radius/TopLeft = -1
Focused/Border/Offset/Radius/TopLeft = -1
Pressed/Border/Offset/Radius/TopLeft = -1
Normal/Border/Offset/Radius/TopRight = -1
Hovered/Border/Offset/Radius/TopRight = -1
Focused/Border/Offset/Radius/TopRight = -1
Pressed/Border/Offset/Radius/TopRight = -1
Normal/Border/Offset/Radius/BottomRight = -1
Hovered/Border/Offset/Radius/BottomRight = -1
Focused/Border/Offset/Radius/BottomRight = -1
Pressed/Border/Offset/Radius/BottomRight = -1
Normal/Border/Offset/Radius/BottomLeft = -1
Hovered/Border/Offset/Radius/BottomLeft = -1
Focused/Border/Offset/Radius/BottomLeft = -1
Pressed/Border/Offset/Radius/BottomLeft = -1
Normal/Shadow/Color = Color( 1, 1, 1, 0 )
Hovered/Shadow/Color = Color( 1, 1, 1, 0 )
Focused/Shadow/Color = Color( 1, 1, 1, 0 )
Pressed/Shadow/Color = Color( 1, 1, 1, 0 )
Normal/Shadow/Size = 0
Hovered/Shadow/Size = -1
Focused/Shadow/Size = -1
Pressed/Shadow/Size = -1
Normal/Shadow/Offset = Vector2( 0, 0 )
Hovered/Shadow/Offset = Vector2( -1, -1 )
Focused/Shadow/Offset = Vector2( -1, -1 )
Pressed/Shadow/Offset = Vector2( -1, -1 )

[connection signal="value_updated" from="Rectangle/CenterContainer/VBoxContainer/HBoxContainer/AnimationName" to="." method="_on_value_updated"]
[connection signal="item_selected" from="Rectangle/CenterContainer/VBoxContainer/HBoxContainer/VisibilityStrategy" to="." method="_on_value_updated"]
[connection signal="value_updated" from="Rectangle/CenterContainer/VBoxContainer/HBoxContainer/DefaultDuration" to="." method="_on_value_updated"]
[connection signal="pressed" from="Rectangle/CenterContainer/VBoxContainer/HBoxContainer/HBoxContainer/AnimaButton" to="." method="_on_AnimaButton_pressed"]
